bug fixes: fixed issue with SVGs shrinking on small screens when dark mode is picked. Fixed issue with images pushed in odd line on mid screen devices with onhover event

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,12 @@ button {
     text-decoration: none;
 }
 
+.img-container .popout-text:hover{
+    box-shadow:  0px 33px 25px 0 #000, 
+                 0 26px 15px 0px #ccc;
+    padding: 0;
+}
+
 .main-img {
  width: 650px;
  height: 488px;
@@ -298,6 +304,9 @@ button {
 @media only screen and (max-width: 950px) {
     .nav-link {
         width: 5rem;
+    }
+    .navbar:hover {
+        height: 8rem;
     }
     .main-sections {
         flex-direction: column;
